[tool.poetry]
name = "m2h"
version = "0.1.0"
description = ""
authors = ["zachvalenta <zjv5002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
loguru = "^0.7.2"
markdown2 = "^2.4.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
